# hw01

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: test_coverage.yml
example/: CMakeLists.txt
src/: mandel.cpp  mandel.h  rainbow.cpp  rainbow.h
stbiw/: CMakeLists.txt
tests/: CMakeLists.txt  test_mandel.cpp  test_rainbow.cpp
